@@ -1,4 +1,3 @@
-
 package TaskManager.TaskManager.Security;
 
 import org.springframework.context.annotation.Bean;
@@ -6,30 +5,29 @@ import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
-import java.util.List;
+import java.util.List; // Only need this import
 
 @Configuration
 public class CorsConfig {
 
-@Bean
-public CorsConfigurationSource corsConfigurationSource() {
-    CorsConfiguration config = new CorsConfiguration();
-    
-    // ⚠️ ADD localhost:5173 and your actual frontend URL
-    config.setAllowedOrigins(Arrays.asList(
-        "http://localhost:5173",  // Your local development
-        "https://task-manager-frontend.onrender.com", // Your deployed frontend
-        "http://localhost:3000"   // If using different port
-    ));
-    
-    config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    config.setAllowedHeaders(Arrays.asList("*"));
-    config.setAllowCredentials(false); // Set to false for simplicity
-    config.setMaxAge(3600L);
-    
-    UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
-    source.registerCorsConfiguration("/**", config);
-    
-    return source;
-}
+    @Bean
+    public CorsConfigurationSource corsConfigurationSource() {
+        CorsConfiguration config = new CorsConfiguration();
+        
+        // Using List.of() - cleaner syntax
+        config.setAllowedOrigins(List.of(
+            "http://localhost:5173",
+            "https://task-manager-frontend.onrender.com"
+        ));
+        
+        config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        config.setAllowedHeaders(List.of("*"));
+        config.setAllowCredentials(false);
+        config.setMaxAge(3600L);
+        
+        UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
+        source.registerCorsConfiguration("/**", config);
+        
+        return source;
+    }
 }
